# resource

./: account.json
cmake/: CMakeLists.txt
cmake/aspect/: CMakeLists.txt
cmake/autoup/: CMakeLists.txt
cmake/dispatch/: CMakeLists.txt
cmake/engine/: CMakeLists.txt
cmake/normal/: CMakeLists.txt
cmake/serialize/: CMakeLists.txt
cmake/system/: CMakeLists.txt
gameTb/agent/setting/: 基础配置.xlsx
gameTb/agent/table/: 基础业务.xlsx  存储管理.xlsx  帐号配置.xlsx  服务器列表.xlsx  网络地址.xlsx  网络配置.xlsx  脚本配置.xlsx  角色列表.xlsx
gameTb/client/setting/: 基础配置.xlsx
gameTb/client/table/: 基础业务.xlsx  存储管理.xlsx  帐号配置.xlsx  应用配置.xlsx  时间相关.xlsx  服务器列表.xlsx  界面系统.xlsx  网络地址.xlsx  网络配置.xlsx  脚本配置.xlsx  角色列表.xlsx
gameTb/game/setting/: 基础配置.xlsx
gameTb/game/table/: 基础业务.xlsx  时间相关.xlsx  界面系统.xlsx  网络地址.xlsx  网络配置.xlsx
gameTb/social/setting/: 基础配置.xlsx
gameTb/social/table/: 基础业务.xlsx  应用配置.xlsx  网络配置.xlsx
gameui/accountEnter/: com.con.lua  core.con.lua  core.lua  string.json  string.zh_CN.con.json  ui.con.json  ui.con.lua  ui.json  ui.lua
gameui/accountLogin/: com.con.lua  core.con.lua  core.lua  string.json  string.zh_CN.con.json  ui.con.json  ui.con.lua  ui.json  ui.lua
gameui/accountRegister/: com.con.lua  core.con.lua  core.lua  string.json  string.zh_CN.con.json  ui.con.json  ui.con.lua  ui.json  ui.lua
gameui/connect/: core.lua  string.json  ui.lua
gameui/connectAgent/: com.con.lua  core.con.lua  event.con.json  string.zh_CN.con.json  ui.con.json  ui.con.lua
gameui/disconnectAgent/: core.con.lua  string.zh_CN.con.json  ui.con.lua
gameui/gameLeave/: com.con.lua  core.con.lua  string.zh_CN.con.json  ui.con.json  ui.con.lua
gameui/gameSplash/: com.con.lua  string.zh_CN.con.json  ui.con.lua
gameui/gameWelcome/: string.zh_CN.con.json  ui.con.lua
gameui/leave/: string.json  ui.lua
gameui/netConnect/: core.con.lua  event.con.json  string.zh_CN.con.json  ui.con.lua
gameui/roleCreate/: com.con.lua  core.con.lua  core.lua  string.json  string.zh_CN.con.json  ui.con.json  ui.con.lua  ui.lua
gameui/serverList/: com.con.lua  core.con.lua  core.lua  string.json  string.zh_CN.con.json  ui.con.json  ui.con.lua  ui.json  ui.lua
gameui/welcome/: core.lua  string.json  ui.lua
loginDb/: script.sql
macosx/cmake/: cmake.sh
script/client/: method.lua
window/cmake/: cmake.bat
window/table/: table.bat
