project(engine)

set( prefixs ${SRC_ROOT}/${PROJECT_NAME} )

set( sources Engine.cpp
	aspect/value/Buffer.cpp
	aspect/value/Value.cpp
	aspect/value/IndexValue.cpp
	aspect/value/OrderValue.cpp
	aspect/value/PacketMgr.cpp
	aspect/value/ValueMgr.cpp
	aspect/condition/Condition.cpp
	aspect/condition/ConditionEngine.cpp
	aspect/dispatch/DispatchEngine.cpp 
	aspect/doing/Doing.cpp
	aspect/entity/Property.cpp
	aspect/entity/Entity.cpp
	aspect/reward/Reward.cpp
	aspect/reward/RewardEngine.cpp
	aspect/select/IfSelect.cpp
	aspect/select/SelectEngine.cpp
	aspect/select/Selector.cpp
	aspect/aspect/AspectEngine.cpp
	aspect/aspect/IAspect.cpp
	aspect/engine/IEngine.cpp
	aspect/engine/EngineMgr.cpp
	aspect/sink/Sink.cpp
	aspect/sink/SinkMgr.cpp
	aspect/sink/SinkEntity.cpp
	aspect/trigger/Trigger.cpp
	handle/Context.cpp
	handle/IContextClone.cpp
	handle/Handle.cpp
	handle/HandleConfig.cpp
	handle/HandleCount.cpp
	handle/HandleEngine.cpp
	url/curl/CurlValue.cpp
	url/curl/CurlFile.cpp
	url/curl/CurlString.cpp
	url/curl/BaseCurl.cpp
	url/curl/HttpCurl.cpp
	url/curl/CurlEngine.cpp
	url/curl/CurlContext.cpp
	url/curl/MultiCurl.cpp
	url/url/UrlInfo.cpp
	url/url/UrlParser.cpp
	url/url/UrlMgr.cpp
	upint/Upint.cpp
	upint/UpintEngine.cpp
	net/netIp/NetIp.cpp
	net/netIp/NetIpMgr.cpp
	net/ioservice/IoService.cpp
	net/session/ISessionRemove.cpp
	tcp/session/TcpSession.cpp
	net/send/ISend.cpp
	tcp/send/SelfTcpSend.cpp
	tcp/send/ServerSend.cpp
	tcp/connect/TcpConnectInfo.cpp
	tcp/connect/TcpConnector.cpp
	tcp/connect/TcpConnectorMgr.cpp
	tcp/connect/TcpConnectEngine.cpp
	tcp/connect/TcpConnectRemove.cpp
	tcp/accept/TcpAcceptorMgr.cpp
	tcp/accept/TcpAcceptEngine.cpp
	tcp/accept/TcpSessionMgr.cpp
	tcp/accept/TcpAcceptRemove.cpp
	count/BitCount.cpp
	count/CountEngine.cpp
	count/CountIndex.cpp
	count/ICount.cpp
	count/Int16Count.cpp
	count/Int32Count.cpp
	count/Int4Count.cpp
	count/Int8Count.cpp
	count/IntArray.cpp
	count/IntCount.cpp
	count/IntEntity.cpp
	count/IntIndex.cpp
	time/time/TimeAdjust.cpp
	time/time/TimeBegin.cpp
	time/time/TimeCount.cpp
	time/time/TimeEnd.cpp
	time/time/TimeStart.cpp
	time/time/TimeDuration.cpp
	time/time/ServerTime.cpp
	time/time/TimeEngine.cpp
	time/server/cServerTime.cpp
	time/client/cServerTime.cpp)
	
SET( headers Engine.hpp
	aspect/value/Buffer.hpp
	aspect/value/Value.hpp
	aspect/value/IndexValue.hpp
	aspect/value/OrderValue.hpp
	aspect/value/PacketMgr.hpp
	aspect/value/ValueMgr.hpp
	aspect/condition/Condition.hpp
	aspect/condition/ConditionEngine.hpp
	aspect/dispatch/DispatchEngine.hpp
	aspect/dispatch/IDispatch.hpp
	aspect/doing/Doing.hpp
	aspect/entity/EentityType.hpp
	aspect/entity/Eproperty.hpp
	aspect/entity/Property.hpp
	aspect/entity/Entity.hpp
	aspect/reward/Reward.hpp
	aspect/reward/RewardEngine.hpp
	aspect/select/EselectSink.hpp
	aspect/select/IfSelect.hpp
	aspect/select/SelectEngine.hpp
	aspect/select/Selector.hpp
	aspect/aspect/AspectEngine.hpp
	aspect/aspect/IAspect.hpp
	aspect/engine/Eengine.hpp
	aspect/engine/IEngine.hpp
	aspect/engine/EngineMgr.hpp
	aspect/sink/Sink.hpp
	aspect/sink/SinkMgr.hpp
	aspect/sink/SinkEntity.hpp
	aspect/trigger/Trigger.hpp
	aspect/doing/EdoingType.hpp
	handle/Context.hpp
	handle/IContextClone.hpp
	handle/Handle.hpp
	handle/HandleConfig.hpp
	handle/HandleCount.hpp
	handle/HandleEngine.hpp
	url/curl/CurlValue.hpp
	url/curl/CurlFile.hpp
	url/curl/CurlString.hpp
	url/curl/BaseCurl.hpp
	url/curl/HttpCurl.hpp
	url/curl/CurlEngine.hpp
	url/curl/CurlContext.hpp
	url/curl/MultiCurl.hpp
	url/curl/EcurlValue.hpp
	url/url/EurlType.hpp
	url/url/UrlInfo.hpp
	url/url/UrlParser.hpp
	url/url/UrlMgr.hpp
	upint/Upint.hpp
	upint/UpintEngine.hpp
	net/netIp/NetIp.hpp
	net/netIp/NetIpMgr.hpp
	net/ioservice/IoService.hpp
	net/session/ISessionRemove.hpp
	tcp/session/TcpSession.hpp
	net/send/ISend.hpp
	tcp/send/SelfTcpSend.hpp
	tcp/send/ServerSend.hpp
	tcp/connect/TcpConnectInfo.hpp
	tcp/connect/TcpConnector.hpp
	tcp/connect/TcpConnectorMgr.hpp
	tcp/connect/TcpConnectEngine.hpp
	tcp/connect/TcpConnectRemove.hpp
	tcp/accept/TcpAcceptorMgr.hpp
	tcp/accept/TcpAcceptEngine.hpp
	tcp/accept/TcpSessionMgr.hpp
	tcp/accept/TcpAcceptRemove.hpp
	count/BitCount.hpp
	count/CountEngine.hpp
	count/CountIndex.hpp
	count/ICount.hpp
	count/Int16Count.hpp
	count/Int32Count.hpp
	count/Int4Count.hpp
	count/Int8Count.hpp
	count/IntArray.hpp
	count/IntCount.hpp
	count/IntEntity.hpp
	count/IntIndex.hpp
	time/time/EtimeBegin.hpp
	time/time/EtimeCount.hpp
	time/time/EtimeEnd.hpp
	time/time/EtimeStart.hpp
	time/time/EtimeState.hpp
	time/time/EtimeType.hpp
	time/time/TimeAdjust.hpp
	time/time/TimeBegin.hpp
	time/time/TimeCount.hpp
	time/time/TimeEnd.hpp
	time/time/TimeStart.hpp
	time/time/TimeDuration.hpp
	time/time/ServerTime.hpp
	time/time/TimeEngine.hpp
	time/server/cServerTime.hpp
	time/client/cServerTime.hpp)
	
foreach(src IN ITEMS ${sources})
	SET(SRCS ${SRCS} ${prefixs}/${src})
endforeach(src)

foreach(src IN ITEMS ${headers})
	SET(HDRS ${HDRS} ${prefixs}/${src})
endforeach(src)

add_library( ${PROJECT_NAME} STATIC ${SRCS} ${HDRS} )

unset(headers)
unset(sources)
unset(prefixs)
